<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hoh.nextone.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/lblRouteValue" />

    <Button
        android:text="@string/lblStartOfTheDay"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:id="@+id/btnBeginDay"
        android:layout_width="match_parent"
        tools:background="@mipmap/greytwo"
        android:layout_below="@+id/lblRouteValue"
        android:layout_centerHorizontal="true"
        android:onClick="btnBeginDayClicked"/>

    <Button
        android:text="@string/lblOrders"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnOrders"
        android:layout_width="match_parent"
        tools:background="@mipmap/greytwo"
        android:layout_below="@+id/btnSales"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/lblEndOfTheDay"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnEndDay"
        android:layout_width="match_parent"
        tools:background="@mipmap/greytwo"
        android:layout_below="@+id/btnOrders"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Miscellaneous"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnMisc"
        android:layout_width="match_parent"
        tools:background="@mipmap/greytwo"
        android:layout_below="@+id/btnEndDay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Sales"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnSales"
        android:layout_width="match_parent"
        tools:background="@mipmap/greytwo"
        tools:text="@string/lblSales"
        android:layout_below="@+id/btnBeginDay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
