<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hoh.nextone.UserLoginActivity">

    <TextView
        android:text="User ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="25dp"
        android:id="@+id/lblLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lblBlank"
        android:ems="10"
        android:layout_below="@+id/lblLogin"
        android:layout_alignLeft="@+id/lblLogin"
        android:layout_alignStart="@+id/lblLogin"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:id="@+id/lblUserIdValue"
        android:textSize="18sp" />

    <TextView
        android:text="@string/prompt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblUserIdValue"
        android:layout_alignLeft="@+id/lblLogin"
        android:layout_alignStart="@+id/lblLogin"
        android:layout_marginTop="31dp"
        android:id="@+id/lblPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_below="@+id/lblPassword"
        android:layout_alignLeft="@+id/lblUserIdValue"
        android:layout_alignStart="@+id/lblUserIdValue"
        android:layout_marginTop="14dp"
        android:id="@+id/txtPasswordValue" />

    <Button
        android:text="@string/action_sign_in_short"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/btnSignIn"
        android:layout_below="@+id/txtPasswordValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        tools:background="@mipmap/greydarkgreybevelbutton"
        android:onClick="btnSignInClicked" />
</RelativeLayout>
